issue with div width overlapping fixed

--- a/src/Components/Sidebar/Sidebar.module.css
+++ b/src/Components/Sidebar/Sidebar.module.css
@@ -8,7 +8,7 @@
   position: -webkit-sticky;
   transform: translateY(200px);
   height: 300px;
-  width: 500px;
+  width: 200px;
   left: 1px;
   z-index: 100;
 }
@@ -60,7 +60,7 @@
   height: 70px;
   border-radius: 10px;
   filter: drop-shadow(5px 1px 2px black);
-  z-index: 100;
+  z-index: 90;
 }
 
 .openSidebar:hover {
@@ -138,6 +138,7 @@
     height: 100vmax;
     max-width: 70vmin;
     transform: translate(-300px, -440px);
+    z-index: 90;
   }
 
   .Sidebar {
@@ -242,6 +243,7 @@
     height: 100vmax;
     max-width: 70vmin;
     transform: translate(-300px, -440px);
+    z-index: 90;
   }
 
   .Sidebar {
@@ -288,6 +290,7 @@
     width: 60px;
     height: 60px;
     border-radius: 30px;
+    z-index: 90;
   }
 
   .burger {
